[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
derive_more = "0.99.17"
colored = "2.0.0"
strum = { version = "0.24.1", features = ["derive"] }
itertools = "0.10.5"